--- a/index.html
+++ b/index.html
@@ -1,22 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>CRUD</title>
-  </head>
-  <body>
-    <h1>Libros</h1>
 
-    <form id="formulario">
-      <h3 id="tituloFormulario">Agregar libros</h3>
-      <input type="text" placeholder="Nombre" id="nombre" required />
-      <input type="text" placeholder="Autor" id="autor" />
-      <button type="submit">Guardar</button>
-      <button type="button" id="btnCancelar">Cancelar</button>
-    </form>
+<head>
+  <meta charset="UTF-8" />
+  <title>CRUD</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 1rem;
+      background: #f9f9f9;
+    }
 
-    <ul id="listaLibros"></ul>
+    h1 {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
 
-    <script src="src/services.js"></script>
-  </body>
+    form {
+      max-width: 600px;
+      margin: 0 auto 2rem;
+      background: #fff;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    form input {
+      width: calc(50% - 10px);
+      margin: 5px;
+      padding: 10px;
+    }
+
+    form button {
+      margin: 5px;
+      padding: 10px 15px;
+    }
+
+    #listaLibros {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+      padding: 0;
+      list-style: none;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    #listaLibros li {
+      background: #fff;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    #listaLibros li button {
+      margin-top: 0.5rem;
+      padding: 6px 10px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+
+</style>
+</head>
+
+<body>
+  <h1>ADAMY</h1>
+
+  <form id="formulario">
+    <h3 id="tituloFormulario">Agregar prenda de ropa</h3>
+    <input type="text" placeholder="Nombre" id="nombre" required />
+    <input type="text" placeholder="Autor" id="autor" />
+    <button type="submit">Guardar</button>
+    <button type="button" id="btnCancelar">Cancelar</button>
+  </form>
+
+  <ul id="listaLibros"></ul>
+
+  <script src="src/services.js"></script>
+</body>
+
 </html>
