--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 
   <ul id="listaLibros"></ul>
 
-  <script src="src/services.js"></script>
+  <script src="../services.js"></script>
 </body>
 
 </html>
