--- a/public/index.html
+++ b/public/index.html
@@ -71,13 +71,22 @@
 <body>
   <h1>ADAMY</h1>
 
-  <form id="formulario">
-    <h3 id="tituloFormulario">Agregar prenda de ropa</h3>
-    <input type="text" placeholder="Nombre" id="nombre" required />
-    <input type="text" placeholder="Autor" id="autor" />
-    <button type="submit">Guardar</button>
-    <button type="button" id="btnCancelar">Cancelar</button>
-  </form>
+<form id="formulario">
+  <h3 id="tituloFormulario">Agregar prenda de ropa</h3>
+  <input type="text" placeholder="Nombre" id="nombre" required />
+  <input type="text" placeholder="Descripción" id="descripcion" />
+  <input type="text" placeholder="Imagen (nombre archivo)" id="imagen" />
+  <input type="number" placeholder="Precio" id="precio" step="0.01" />
+  <input type="number" placeholder="Descuento (%)" id="descuento" />
+  <input type="text" placeholder="Color" id="color" />
+  <input type="text" placeholder="Género" id="genero" />
+  <input type="text" placeholder="Temporada" id="temporada" />
+  <input type="text" placeholder="Tipo" id="tipo" />
+  <input type="date" placeholder="Fecha de lanzamiento" id="fecha_lanzamiento" />
+  <input type="text" placeholder="Estilo" id="estilo" />
+  <button type="submit">Guardar</button>
+  <button type="button" id="btnCancelar">Cancelar</button>
+</form>
 
   <ul id="listaLibros"></ul>
 
