dividir logica CSS

--- a/public/index.html
+++ b/public/index.html
@@ -1,87 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <title>ADAMY</title>
+    <link rel="stylesheet" href="../src/styles/base.css" />
+    <link rel="stylesheet" href="../src/styles/components.css" />
+    <link rel="stylesheet" href="../src/styles/layout.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>CRUD</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 1rem;
-      background: #f9f9f9;
-    }
+  <body>
+    <h1>ADAMY</h1>
 
-    h1 {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
+    <form id="form">
+      <h3 id="formTitle">Add clothing item</h3>
+      <input type="text" placeholder="Name" id="name" required />
+      <input type="text" placeholder="Author" id="author" />
+      <button type="submit">Save</button>
+      <button type="button" id="btnCancel">Cancel</button>
+    </form>
 
-    form {
-      max-width: 600px;
-      margin: 0 auto 2rem;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+    <ul id="bookList"></ul>
 
-    form input {
-      width: calc(50% - 10px);
-      margin: 5px;
-      padding: 10px;
-    }
-
-    form button {
-      margin: 5px;
-      padding: 10px 15px;
-    }
-
-    #listaLibros {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-      padding: 0;
-      list-style: none;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    #listaLibros li {
-      background: #fff;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    #listaLibros li button {
-      margin-top: 0.5rem;
-      padding: 6px 10px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-
-</style>
-</head>
-
-<body>
-  <h1>ADAMY</h1>
-
-  <form id="formulario">
-    <h3 id="tituloFormulario">Agregar prenda de ropa</h3>
-    <input type="text" placeholder="Nombre" id="nombre" required />
-    <input type="text" placeholder="Autor" id="autor" />
-    <button type="submit">Guardar</button>
-    <button type="button" id="btnCancelar">Cancelar</button>
-  </form>
-
-  <ul id="listaLibros"></ul>
-
-  <script src="../services.js"></script>
-</body>
-
+    <script src="../services.js"></script>
+  </body>
 </html>
