feat:creacion-del-footer

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
+ <meta charset="UTF-8" />
   <title>CRUD</title>
+  <link rel="stylesheet" href="../src/styles/footer.css">
   <style>
     body {
       font-family: sans-serif;
@@ -89,6 +90,11 @@
 </form>
 
   <ul id="listaLibros"></ul>
+
+<footer>
+    <a href="mailto:contacto@adamy.com" target="_blank">Contáctanos</a>
+    <a href="https://www.instagram.com/adamy_ropa" target="_blank">Instagram</a>
+</footer>
 
   <script src="../services.js"></script>
 </body>
