--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
  <meta charset="UTF-8" />
   <title>CRUD</title>
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Gorditas:wght@400;700&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../src/styles/footer.css">
   <style>
     body {
@@ -92,13 +93,14 @@
   <ul id="listaLibros"></ul>
 
 <footer>
-    <a href="mailto:contacto@adamy.com" target="_blank">Contáctanos</a>
-    <a href="https://www.instagram.com/adamy_ropa" target="_blank">Instagram</a>
+  <div class="pie">
+    <a href="mailto:contacto@adamy.com" target="_blank">Contac us here</a>
+    <a href="https://www.instagram.com" target="_blank">Instagram</a>
+    <p>ADAMY @ 2025 Todos los derchos reservados</p>
+  </div> 
 </footer>
 
   <script src="../services.js"></script>
 </body>
-
-
 
 </html>
