--- a/public/index.html
+++ b/public/index.html
@@ -18,24 +18,24 @@
 <body>
   <h1>ADAMY</h1>
 
-  <form id="formulario">
-    <h3 id="tituloFormulario">Agregar prenda de ropa</h3>
-    <input type="text" placeholder="Nombre" id="nombre" required />
-    <input type="text" placeholder="Descripción" id="descripcion" />
-    <input type="text" placeholder="Imagen (nombre archivo)" id="imagen" />
-    <input type="number" placeholder="Precio" id="precio" step="0.01" />
-    <input type="number" placeholder="Descuento (%)" id="descuento" />
-    <input type="text" placeholder="Color" id="color" />
-    <input type="text" placeholder="Género" id="genero" />
-    <input type="text" placeholder="Temporada" id="temporada" />
-    <input type="text" placeholder="Tipo" id="tipo" />
-    <input type="date" placeholder="Fecha de lanzamiento" id="fecha_lanzamiento" />
-    <input type="text" placeholder="Estilo" id="estilo" />
-    <button type="submit">Guardar</button>
-    <button type="button" id="btnCancelar">Cancelar</button>
-  </form>
+<form id="form">
+  <h3 id="formTitle">Agregar prenda de ropa</h3>
+  <input type="text" placeholder="Nombre" id="name" required />
+  <input type="text" placeholder="Descripción" id="description" />
+  <input type="text" placeholder="Imagen (nombre archivo)" id="image" />
+  <input type="number" placeholder="Precio" id="price" step="0.01" />
+  <input type="number" placeholder="Descuento (%)" id="discount" />
+  <input type="text" placeholder="Color" id="color" />
+  <input type="text" placeholder="Género" id="gender" />
+  <input type="text" placeholder="Temporada" id="season" />
+  <input type="text" placeholder="Tipo" id="type" />
+  <input type="date" placeholder="Fecha de lanzamiento" id="release_date" />
+  <input type="text" placeholder="Estilo" id="style" />
+  <button type="submit">Guardar</button>
+  <button type="button" id="btnCancel">Cancelar</button>
+</form>
 
-  <ul id="listaLibros"></ul>
+<ul id="itemList"></ul>
 
   <script src="../services.js"></script>
 </body>
