--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     body {
       font-family: sans-serif;
       margin: 0;
-      padding: 1rem;
+      padding: 0;
       background: #f9f9f9;
     }
 
@@ -94,9 +94,9 @@
 
 <footer>
   <div class="pie">
-    <a href="mailto:contacto@adamy.com" target="_blank">Contac us here</a>
-    <a href="https://www.instagram.com" target="_blank">Instagram</a>
-    <p>ADAMY @ 2025 Todos los derchos reservados</p>
+    <a href="mailto:contacto@adamy.com" target="_blank">CONTAC US HERE</a>
+    <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
+    <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
   </div> 
 </footer>
 
