--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,14 @@
 
 <ul id="itemList"></ul>
 
+<footer>
+  <div class="pie">
+    <a href="mailto:contacto@adamy.com" target="_blank">CONTAC US HERE</a>
+    <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
+    <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
+  </div> 
+</footer>
+
   <script src="../services.js"></script>
 </body>
 
