ADA18 Ver productos/ Muestra con filtros

--- a/public/index2.html
+++ b/public/index2.html
@@ -71,6 +71,8 @@
 
 <body>
   <h1>ADAMY</h1>
+  <input type="text" id="searchText"  placeholder="Buscar...">
+  <button id="searchButton">Buscar</button>
 <div id="containerProducts"></div>
 <!--<form id="formulario">
   <h3 id="tituloFormulario">Agregar prenda de ropa</h3>
