--- a/src/pages/ShopPage.html
+++ b/src/pages/ShopPage.html
@@ -1,1 +1,53 @@
-<!-- Página pública que muestra los productos (catálogo) -->
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+ <meta charset="UTF-8" />
+  <title>CRUD</title>
+  <link rel="stylesheet" href="../styles/base.css">
+  <link rel="stylesheet" href="../styles/footer.css">
+  <!-- Funnel Display font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+  <!-- Red Hat Text font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <h1>ADAMY</h1>
+
+<form id="form">
+  <h3 id="formTitle">Agregar prenda de ropa</h3>
+  <input type="text" placeholder="Nombre" id="name" required />
+  <input type="text" placeholder="Descripción" id="description" />
+  <input type="text" placeholder="Imagen (nombre archivo)" id="image" />
+  <input type="number" placeholder="Precio" id="price" step="0.01" />
+  <input type="number" placeholder="Descuento (%)" id="discount" />
+  <input type="text" placeholder="Color" id="color" />
+  <input type="text" placeholder="Género" id="gender" />
+  <input type="text" placeholder="Temporada" id="season" />
+  <input type="text" placeholder="Tipo" id="type" />
+  <input type="date" placeholder="Fecha de lanzamiento" id="release_date" />
+  <input type="text" placeholder="Estilo" id="style" />
+  <button type="submit">Guardar</button>
+  <button type="button" id="btnCancel">Cancelar</button>
+</form>
+
+<ul id="itemList"></ul>
+
+
+<footer>
+  <div class="pie">
+    <a href="mailto:contacto@adamy.com" target="_blank">CONTAC US HERE</a>
+    <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
+    <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
+  </div> 
+</footer>
+
+  <script src="../services.js"></script>
+</body>
+
+</html>
