fixbug/arreglando ubicacion de ProductList.html en Pages

--- a/src/pages/ProductsList.html
+++ b/src/pages/ProductsList.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>CRUD</title>
-  <link rel="stylesheet" href="../src/styles/cards.css"/>
+  <link rel="stylesheet" href="../styles/cards.css"/>
   <style>
     body {
       font-family: sans-serif;
@@ -93,7 +93,7 @@
 
   <ul id="listaLibros"></ul>
 -->
-  <script src="../src/components/productCard.js"></script>
+  <script src="../components/productCard.js"></script>
 </body>
 
 
