--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <title>CRUD</title>
   <link rel="stylesheet" href="../styles/cards.css"/>
-   <link rel="stylesheet" href="../styles/footer.css"/>
-    <link rel="stylesheet" href="../styles/header.css"/>
+  <link rel="stylesheet" href="../styles/footer.css"/>
+  <link rel="stylesheet" href="../styles/header.css"/>
+  <link rel="stylesheet" href="../styles/productsPage.css"/>
 
 </head>
 
@@ -17,31 +18,63 @@
 
  <header>
   <nav class="nav">
-    <ul class="menu">
+    <!-- Menú hamburguesa a la izquierda -->
+    <div class="menu-toggle" id="menu-toggle">☰</div>
+
+    <!-- Logo -->
+    <div class="logo-container">
+      <img class="logo" src="../src/img/logo png A.png" alt="Logo">
+    </div>
+
+    <!-- Menú desplegable -->
+    <ul class="menu" id="menu">
       <li><a href="#">Género</a></li>
       <li><a href="#">Inicio</a></li>
       <li><a href="#">Servicios</a></li>
       <li><a href="#">Contacto</a></li>
     </ul>
-    <div class="menu-toggle" id="menu-toggle">☰</div>
+
+    <!-- Barra de búsqueda -->
+    <div class="search-bar">
+      <input type="text" placeholder="Busca por producto, colección..." id="searchText">
+      <button id="searchButton">🔍</button>
+    </div>
+
+    <!-- Iconos -->
+    <div class="user-buttons">
+      <button class="perfil"><img src="../src/img/usuario def.png" alt="Perfil"></button>
+      <button class="megusta"><img src="../src/img/icons8-me-gusta-48.png" alt="Me gusta"></button>
+    </div>
   </nav>
-  <img class="logo" src="../src/img/logo png A.png" alt="">
-  <div class="search-bar">
-    <input type="text" id="searchText" placeholder="Busca por producto, colección...">
-    <button id="searchButton">🔍</button>
-  </div>
-  <div class="grupo1">
-    <button class="perfil"><img src="../src/img/usuario def.png" alt=""></button>
-    <!-- </div> -->
-    <!-- <div class="megusta"> -->
-    <button class="megusta"><img src="../src/img/icons8-me-gusta-48.png" alt=""></button>
-  </div>
 </header>
 
+ <main class="main-ProductsShow">
+  <aside class="sidebar">
+  <ul>
+      <li><h3>Categorías</h3></li>
 
+      <li><h4>Género</h4></li>
+      <li><a href="#">Hombre</a></li>
+      <li><a href="#">Mujer</a></li>
+      
+      <li><h4>Estación</h4></li>
+       <li><a href="#">Primavera</a></li>
+      <li><a href="#">Verano</a></li>
+      <li><a href="#">Otoño</a></li>
+      <li><a href="#">Invierno</a></li>
+ 
+      <li><h4>Tipo</h4></li>
+       <li><a href="#">Formal</a></li>
+      <li><a href="#">Casual</a></li>
+      <li><a href="#">Deporte</a></li>
+
+      <li><h4>Color</h4></li>
+      
+    </ul>
+</aside>
   
-<div id="containerProducts"></div>
-
+<section id="containerProducts"></section>
+</main>
 
 <footer>
   <div class="pie">
@@ -51,6 +84,7 @@
   </div>
 </footer>
   <script src="../components/productCard.js"></script>
+  <script src="../components/Burguer-menu.js"></script>
 </body>
 
 
