--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
     <!-- Iconos -->
     <div class="user-buttons">
-      <button class="perfil"><img src="../src/img/usuario def.png" alt="Perfil"></button>
+      <a href="../public/loging.html"><button class="perfil"><img src="../src/img/usuario def.png" alt="Perfil"></button></a>
       <button class="megusta"><img src="../src/img/icons8-me-gusta-48.png" alt="Me gusta"></button>
     </div>
   </nav>
