--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
       <!-- Iconos -->
       <div class="user-buttons">
-        <button class="users"><img src="../src/img/icons/users2.png" alt="Perfil"></button>
+       <a href="../public/loging.html"><button class="users"><img src="../src/img/icons/users2.png" alt="Perfil"></button></a>
         <button class="favs"><img src="../src/img/icons/favs2.png" alt="Me gusta"></button>
       </div>
     </nav>
