--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
 
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
+        <li><a href="../public/index.html">Inicio</a></li>
         <li><a href="#">Género</a></li>
-        <li><a href="#">Inicio</a></li>
         <li><a href="#">Servicios</a></li>
         <li><a href="#">Contacto</a></li>
       </ul>
