--- a/public/loging.html
+++ b/public/loging.html
@@ -25,9 +25,10 @@
 
       <!-- Logo -->
       <div class="logo-container">
-        <img class="logo" src="../src/img/icons/logo.png" alt="Logo">
+        <button class="logotrans"><a href="../public/index.html"></a>
+        <img class="logo" src="../src/img/icons/logo.png" alt="Logo"></button>
       </div>
-
+      
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
         <li><a href="../public/index.html">Inicio</a></li>
