--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -17,63 +17,100 @@
 <body>
 
  <header>
-  <nav class="nav">
-    <!-- Menú hamburguesa a la izquierda -->
-    <div class="menu-toggle" id="menu-toggle">☰</div>
+    <nav class="nav">
+      <div class="menu-toggle" id="menu-toggle">☰</div>
 
-    <!-- Logo -->
-    <div class="logo-container">
-      <img class="logo" src="../src/img/logo png A.png" alt="Logo">
-    </div>
+      <!-- Logo -->
+      <div class="logo-container">
+        <img class="logo" src="../img/icons/logo.png" alt="Logo">
+      </div>
 
-    <!-- Menú desplegable -->
-    <ul class="menu" id="menu">
-      <li><a href="#">Género</a></li>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Servicios</a></li>
-      <li><a href="#">Contacto</a></li>
-    </ul>
+      <!-- Menú desplegable -->
+      <ul class="menu" id="menu">
+        <li><a href="#">Género</a></li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Servicios</a></li>
+        <li><a href="#">Contacto</a></li>
+      </ul>
 
-    <!-- Barra de búsqueda -->
-    <div class="search-bar">
-      <input type="text" placeholder="Busca por producto, colección..." id="searchText">
-      <button id="searchButton">🔍</button>
-    </div>
+      <!-- Barra de búsqueda -->
+      <div class="search-bar">
+        <input type="text" placeholder="Buscar producto" id="searchText">
+        <button id="searchButton">
+          <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
+        </button>
+      </div>
 
-    <!-- Iconos -->
-    <div class="user-buttons">
-      <button class="perfil"><img src="../src/img/usuario def.png" alt="Perfil"></button>
-      <button class="megusta"><img src="../src/img/icons8-me-gusta-48.png" alt="Me gusta"></button>
-    </div>
-  </nav>
-</header>
+      <!-- Iconos -->
+      <div class="user-buttons">
+        <button class="users"><img src="../img/icons/users2.png" alt="Perfil"></button>
+        <button class="favs"><img src="../img/icons/favs2.png" alt="Me gusta"></button>
+      </div>
+    </nav>
+  </header>
+
 
  <main class="main-ProductsShow">
   <aside class="sidebar">
   <ul>
+    <li><a href="#" data-text="All"><h3>VER TODO</h3></a></li>
+    <li><hr></li> 
       <li><h3>Categorías</h3></li>
 
       <li><h4>Género</h4></li>
-      <li><a href="#">Hombre</a></li>
-      <li><a href="#">Mujer</a></li>
+      <li><a href="#" data-text="Hombre">-Hombre</a></li>
+      <li><a href="#" data-text="Mujer">-Mujer</a></li>
       
       <li><h4>Estación</h4></li>
-       <li><a href="#">Primavera</a></li>
-      <li><a href="#">Verano</a></li>
-      <li><a href="#">Otoño</a></li>
-      <li><a href="#">Invierno</a></li>
+       <li><a href="#" data-text="Primavera">-Primavera</a></li>
+      <li><a href="#" data-text="Verano">-Verano</a></li>
+      <li><a href="#" data-text="Otoño">-Otoño</a></li>
+      <li><a href="#" data-text="Invierno">-Invierno</a></li>
  
       <li><h4>Tipo</h4></li>
-       <li><a href="#">Formal</a></li>
-      <li><a href="#">Casual</a></li>
-      <li><a href="#">Deporte</a></li>
+       <li><a href="#" data-text="Formal">-Formal</a></li>
+      <li><a href="#" data-text="Casual">-Casual</a></li>
+      <li><a href="#" data-text="Deportivo">-Deportivo</a></li>
 
       <li><h4>Color</h4></li>
-      
+      <div class="color-options">
+  
+ <a href="#" data-text="Negro"> 
+    <div class="color-box" data-text="Negro" style="background-color: black;"></div></a>
+  <a href="#" data-text="Blanco"> 
+    <div class="color-box"  style="background-color: white;"></div></a>
+   <a href="#" data-text="Rojo">
+    <div class="color-box" data-text="Rojo" style="background-color: red;"></div></a>
+  <a href="#" data-text="Gris">
+     <div class="color-box" data-text="Gris" style="background-color:grey;"></div></a>
+  <a href="#" data-text="Beige"> 
+    <div class="color-box" data-text="Beige" style="background-color: rgb(243, 230, 173)"></div></a>
+  <a href="#" data-text="Amarillo">
+    <div class="color-box" data-text="Amarillo" style="background-color: yellow;"></div></a>
+ <a href="#" data-text="Azul">
+  <div class="color-box" data-text="Azul" style="background-color: blue;"></div></a>
+ <a href="#" data-text="Verde">
+  <div class="color-box" data-text="Verde" style="background-color: green;"></div></a>
+ <a href="#" data-text="Rosa">
+  <div class="color-box" data-text="Rosa" style="background-color:rgb(240, 116, 184);"></div></a>
+</div>
     </ul>
 </aside>
-  
+
+<div class="resultadosOrden">
+<div class="product-toolbar">
+  <p id="ResultsNumber">Resultados</p>
+  <select id="sortSelect">
+    <option value="default">Ordenar</option>
+    <option value="precio_asc">Precio: Menor a Mayor ⬇</option>
+    <option value="precio_desc">Precio: Mayor a Menor ⬆</option>
+    <option value="descuento_asc">Descuento: Menor a Mayor ⬇</option>
+    <option value="descuento_desc">Descuento: Mayor a Menor ⬆</option>
+  </select>
+</div> 
+
 <section id="containerProducts"></section>
+</div>
 </main>
 
 <footer>
