funcinalidad del logo en cada pagina

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
 
       <!-- Logo -->
       <div class="logo-container">
+        <a href="index.html">
         <img class="logo" src="../src/img/icons/logo.png" alt="Logo">
+        </a>
       </div>
 
       <!-- Menú desplegable -->
