--- a/public/loging.html
+++ b/public/loging.html
@@ -25,8 +25,9 @@
 
       <!-- Logo -->
       <div class="logo-container">
-        
+        <a href="index.html">
         <img class="logo" src="../src/img/icons/logo.png" alt="Logo"></button>
+        </a>
       </div>
 
       <!-- Menú desplegable -->
