--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,10 @@
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
         <li><a href="../public/index.html">Inicio</a></li>
-        <li><a href="#">Género</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Hombre</a></li>
+        <li><a href="#">Mujer</a></li>
+        <li><a href="#">Temporada</a></li>
+        <li><a href="#">Contactanos</a></li>
       </ul>
 
       <!-- Barra de búsqueda -->
