--- a/public/index.html
+++ b/public/index.html
@@ -58,13 +58,13 @@
     </video>
     <div class="video-text">
       <h1>NEW COLLECTION</h1>
-      <p><a href="#" class="link-hover">VER MÁS</a></p>
+      <p><a href="#" class="link-hover" data-id="All">VER MÁS</a></p>
     </div>
   </div>
 
   <div class="season-container">
     <div class="season-text">
-      <a href="#" class="link-hover">TEMPORADA</a>
+      <a href="#" class="link-hover" data-id="Verano">TEMPORADA</a>
     </div>
     <div class="background-season background-season-1"></div>
     <div class="background-season background-season-2"></div>
@@ -72,13 +72,13 @@
 
   <div class="background-women">
     <div class="section-text">
-      <a href="#" class="link-hover">MUJER</a>
+      <a href="#" class="link-hover" data-id="Mujer">MUJER</a>
     </div>
   </div>
 
   <div class="background-men">
     <div class="section-text">
-      <a href="#" class="link-hover">HOMBRE</a>
+      <a href="#" class="link-hover" data-id="Hombre">HOMBRE</a>
     </div>
   </div>
 
@@ -91,6 +91,7 @@
   </footer>
 
   <script src="../src/components/Burguer-menu.js"></script>
+  <script src="../src/components/indexToProducts.js"></script>
 </body>
 
 </html>
