--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -32,8 +32,8 @@
 
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
+        <li><a href="../public/index.html">Inicio</a></li>
         <li><a href="#">Género</a></li>
-        <li><a href="#">Inicio</a></li>
         <li><a href="#">Servicios</a></li>
         <li><a href="#">Contacto</a></li>
       </ul>
@@ -48,11 +48,12 @@
 
       <!-- Iconos -->
       <div class="user-buttons">
-        <button class="users"><img src="../img/icons/users2.png" alt="Perfil"></button>
+       <a href="../public/loging.html"><button class="users"><img src="../img/icons/users2.png" alt="Perfil"></button></a>
         <button class="favs"><img src="../img/icons/favs2.png" alt="Me gusta"></button>
       </div>
     </nav>
   </header>
+
 
 
  <main class="main-ProductsShow">
