fixbug/boton inicio

--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -26,8 +26,11 @@
       <div class="menu-toggle" id="menu-toggle">☰</div>
 
       <!-- Logo -->
+       
       <div class="logo-container">
+        <a href="../../public/index.html">
         <img class="logo" src="../img/icons/logo.png" alt="Logo">
+      </a>
       </div>
 
       <!-- Menú desplegable -->
