--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -22,7 +22,7 @@
 
       <!-- Logo -->
       <div class="logo-container">
-        <a href="index.html">
+        <a href="../../public/index.html">
         <img class="logo" src="../img/icons/logo.png" alt="Logo">
         </a>
       </div>
