agregué rutas al logo y botones de hamburguesa

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <li><a href="#">Hombre</a></li>
         <li><a href="#">Mujer</a></li>
         <li><a href="#">Temporada</a></li>
-        <li><a href="#">Contactanos</a></li>
+        <li><a href="../src/pages/contact.html">Contactanos</a></li>
       </ul>
 
       <!-- Barra de búsqueda -->
