--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -24,18 +24,18 @@
 
       <!-- Logo -->
       <div class="logo-container">
-        <a href="index.html">
+        <a href="../../public/index.html">
         <img class="logo" src="../img/icons/logo.png" alt="Logo">
         </a>
       </div>
 
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
-        <li><a href="../public/index.html">Inicio</a></li>
+        <li><a href="../../public/index.html">Inicio</a></li>
         <li><a href="#">Hombre</a></li>
         <li><a href="#">Mujer</a></li>
         <li><a href="#">Temporada</a></li>
-        <li><a href="#">Contactanos</a></li>
+        <li><a href="">Contactanos</a></li>
       </ul>
 
       <!-- Barra de búsqueda -->
