ADA-28 Ordenar productos por precio y descuento

--- a/public/index.html
+++ b/public/index.html
@@ -45,14 +45,14 @@
       <div class="search-bar">
         <input type="text" placeholder="Buscar producto" id="searchText">
         <button id="searchButton">
-          <img src="../src/img/icons/search-icon.png" alt="Buscar" class="search-icon">
+          <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
         </button>
       </div>
 
       <!-- Iconos -->
       <div class="user-buttons">
-       <a href="../public/loging.html"><button class="users"><img src="../src/img/icons/users2.png" alt="Perfil"></button></a>
-        <button class="favs"><img src="../src/img/icons/favs2.png" alt="Me gusta"></button>
+       <a href="../public/loging.html"><button class="users"><img src="../img/icons/users2.png" alt="Perfil"></button></a>
+        <button class="favs"><img src="../img/icons/favs2.png" alt="Me gusta"></button>
       </div>
     </nav>
   </header>
@@ -60,7 +60,7 @@
 
   <div class="background-video">
     <video autoplay muted loop playsinline>
-      <source src="../src/img/background/background-video.mp4" type="video/mp4" />
+      <source src="../img/background/background-video.mp4" type="video/mp4" />
     </video>
     <div class="video-text">
       <h1>NEW COLLECTION</h1>
